--- a/common/Makefile
+++ b/common/Makefile
@@ -10,7 +10,7 @@ COMMON_BASIC_OBJS +=	common/amode.o
 COMMON_BASIC_OBJS +=	$(if $(CONFIG_PLAYABLE), common/ballsave.o)
 COMMON_BASIC_OBJS +=	common/coin.o
 COMMON_BASIC_OBJS +=	common/db.o
-COMMON_BASIC_OBJS += common/ebflex.o
+COMMON_BASIC_OBJS += $(if $(CONFIG_EBFLEX), common/ebflex.o)
 COMMON_BASIC_OBJS +=	common/event-audit.o
 COMMON_BASIC_OBJS +=	$(if $(CONFIG_PIC),,common/flipcode.o)
 COMMON_BASIC_OBJS +=	common/initials.o
