Commit has several bugs

--- a/machine/tz/Makefile
+++ b/machine/tz/Makefile
@@ -61,8 +61,8 @@ PINMAME_OTHER_ROMS = tzu*.rom
 # and leffs.  RTTs must go into GAME_OBJS.
 #
 
-SCHED_HEADERS += build/left_sling.h build/right_sling.h build/left_jet.h build/right_jet.h build/lower_jet.h \
-	build/left_mpf.h build/right_mpf.h
+SCHED_HEADERS += build/left_sling.h build/right_sling.h build/left_jet.h \
+	build/right_jet.h build/lower_jet.h build/left_mpf.h build/right_mpf.h
 
 GAME_OBJS = clock.o magnet.o sling.o jets.o autofire.o gumball.o \
 	config.o loop.o rampdiv.o
@@ -77,7 +77,8 @@ GAME_PAGED_OBJS = leftramp.o skill.o deadend.o camera.o \
 	mpf.o clockmillions.o chaosmb.o powerball.o \
 	multiball.o sssmb.o deffs.o lock.o
 
-GAME2_OBJS = lanes.o unlit.o spiralaward.o leffs.o bonus.o tz_amode.o star.o rocket.o
+GAME2_OBJS = lanes.o unlit.o spiralaward.o leffs.o bonus.o tz_amode.o star.o \
+	rocket.o thingfl.o
 
 FIF_SRCS += images/cow.fif
 
