Initial checkin of the score rank module.
This module must be enabled by defining CONFIG_SCORE_RANK := y in the Makefile
or .config.  When enabled, the system periodically updates a ranking of all
scores in a multiplayer game.  It will generate an event 'score_rank_change'
anytime it changes, at most once per second.  The ranks are guaranteed to be
correct at ball start and end game, too.

--- a/common/Makefile
+++ b/common/Makefile
@@ -22,6 +22,7 @@ COMMON_BASIC_OBJS +=	common/plunger.o
 COMMON_BASIC_OBJS +=	common/printer.o
 COMMON_BASIC_OBJS +=	common/reset.o
 COMMON_BASIC_OBJS +=	$(if $(CONFIG_WPC), common/rtc.o)
+COMMON_BASIC_OBJS +=	$(if $(CONFIG_SCORE_RANK), common/score_rank.o)
 COMMON_BASIC_OBJS += $(if $(CONFIG_ALPHA), common/segtrans.o)
 COMMON_BASIC_OBJS +=	$(if $(CONFIG_WPC), common/service.o)
 COMMON_BASIC_OBJS +=	common/start_button.o
