Wrap real-time clock code in CONFIG_RTC, instead of CONFIG_WPC.
This permits real-time clock support on other hardware architectures.

--- a/platform/native/Makefile
+++ b/platform/native/Makefile
@@ -20,6 +20,7 @@ include cpu/$(CPU)/Makefile
 CONFIG_WPC=y
 CONFIG_FONT ?= $(CONFIG_DMD)
 CONFIG_AC=y
+$(eval $(call have,CONFIG_RTC))
 CONFIG_ANIMATION ?= $(CONFIG_DMD)
 
 # Platform dependent files
