--- a/cpu/m6809/Makefile
+++ b/cpu/m6809/Makefile
@@ -40,7 +40,7 @@ KERNEL_ASM_OBJS += $(C)/farcall.o
 KERNEL_OBJS     += $(if $(CONFIG_TASK), $(C)/task.o)
 KERNEL_ASM_OBJS += $(if $(CONFIG_TASK), $(C)/task_6809.o)
 KERNEL_BASIC_OBJS += $(if $(CONFIG_MALLOC), $(C)/malloc.o)
-KERNEL_OBJS     += $(C)/string.o
+KERNEL_ASM_OBJS += $(C)/string.o
 KERNEL_ASM_OBJS += $(C)/bcd_string.o
 KERNEL_ASM_OBJS += $(C)/irqload.o
 ifeq ($(FREEWPC_DEBUGGER),y)
