Change back to tzone9_2.rom for the VP ROM name.

--- a/machine/tz/Makefile
+++ b/machine/tz/Makefile
@@ -44,7 +44,7 @@ MACHINE_MINOR = 97
 
 PINMAME_MACHINE = tz_92
 
-PINMAME_GAME_ROM = tz_94h.rom
+PINMAME_GAME_ROM = tzone9_2.rom
 
 PINMAME_OTHER_ROMS = tzu*.rom
 
