--- a/test/Makefile
+++ b/test/Makefile
@@ -6,6 +6,7 @@ TEST2_OBJS += test/preset.o
 TEST2_OBJS += $(if $(CONFIG_DMD),test/swtest.o)
 TEST2_OBJS += $(if $(CONFIG_DMD),test/dmdtest.o)
 TEST2_OBJS += test/adjust.o
+TEST2_OBJS += test/histogram.o
 TEST2_OBJS += test/timestamp.o
 TEST2_OBJS += test/stress.o
 TEST2_OBJS += test/wire.o
