--- a/machine/tz/Makefile
+++ b/machine/tz/Makefile
@@ -84,7 +84,8 @@ GAME2_OBJS = lanes.o unlit.o spiralaward.o leffs.o \
 	hitch.o
 
 GAME3_OBJS = tz_flipcode.o rules.o greed.o clockmillions.o \
-	spiral.o maghelper.o tnf.o bttz.o
+	spiral.o maghelper.o tnf.o bttz.o factoids.o
+
 
 IMAGE_MAP += $(M)/tz.ild
 
