Missing prototypes are now errors when compiling for the 6809.
This will now flag errors commonly caused by forgetting to declare
a prototype with the proper ROM bank selector (__common__, etc.)
Failure to fix these can result in software crashes.

These were previously emitted as warnings, but due to the strong
possibility of them causing serious problems, they are now
promoted to errors.

In native mode, where there is no bank switching, it remains just
a warning and not an error.

--- a/platform/wpc/Makefile
+++ b/platform/wpc/Makefile
@@ -32,7 +32,7 @@ CONFIG_SCORE_RANK := y
 #
 INT_CFLAGS = -mint8
 # TODO : Don't hardcode code/data sections here like this!
-CFLAGS += $(INT_CFLAGS) -DHAVE_NVRAM -mdirect -DCONFIG_PLATFORM_WPC -mwpc -fno-builtin -mcode-section=.text -mdata-section=.text -mbss-section=ram -Wno-format
+CFLAGS += $(INT_CFLAGS) -DHAVE_NVRAM -mdirect -DCONFIG_PLATFORM_WPC -mwpc -fno-builtin -mcode-section=.text -mdata-section=.text -mbss-section=ram -Wno-format -Werror=implicit-function-declaration
 EXTRA_ASFLAGS += -D__int8__ -DCONFIG_PLATFORM_WPC
 
 # Say which source files need to be compiled in for the WPC platform only.
