--- a/platform/wpc/Makefile
+++ b/platform/wpc/Makefile
@@ -7,7 +7,7 @@ P := platform/wpc
 
 # Common 6809 configuration
 CPU := m6809
-$(eval $(call have,CONFIG_PERIODIC_IRQ)
+$(eval $(call have,CONFIG_PERIODIC_IRQ))
 CONFIG_TASK := y
 CONFIG_MALLOC := y
 include cpu/$(CPU)/Makefile
