Support platforms which handle G.I. differently than WPC:
- Add three new compile-time configuration variables:
    - CONFIG_GI : has some form of GI.
	 - CONFIG_AC : supports zerocross detection.
	 - CONFIG_TRIAC : uses ZC detect + triacs to do GI dimming.

  WPC defines all three of these, whereas Whitestar only defines
  CONFIG_GI (it just has a relay and cannot dim).  It is possible
  now to disable all GI support by defining none of them.

- Change the core OS routines which twiddle GI not to do so
  when CONFIG_GI is not defined.  In this configuration,
  GI APIs are completely not available.  This includes test
  mode.

- Renamed triac_init() to gi_init().

- IRQ function to update triacs is only for dimming, and thus is
  now only installed when CONFIG_TRIAC is set.

- All GI dimming functions are compiled out when CONFIG_TRIAC is
  undefined.  They were unused except for test mode thus far.

- The pinio function to write (non-dimmed) GI is renamed to
  pinio_write_gi().  If CONFIG_TRIAC is defined, the platform
  should also define pinio_write_triac() [for WPC these do the
  same thing].

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -51,7 +51,7 @@ KERNEL_HW_OBJS += kernel/sol.o
 KERNEL_HW_OBJS += kernel/sound.o
 KERNEL_HW_OBJS += kernel/switches.o
 KERNEL_HW_OBJS += kernel/timer.o   # why not KERNEL_SW_OBJS?
-KERNEL_HW_OBJS += kernel/triac.o
+KERNEL_HW_OBJS += $(if $(CONFIG_GI), kernel/triac.o)
 
 KERNEL_OBJS += $(KERNEL_BASIC_OBJS) $(KERNEL_SW_OBJS) $(KERNEL_HW_OBJS)
 
