--- a/platform/whitestar/Makefile
+++ b/platform/whitestar/Makefile
@@ -12,6 +12,8 @@ CONFIG_WHITESTAR ?= y
 CONFIG_FONT ?= $(CONFIG_DMD)
 CONFIG_AC ?= n
 CONFIG_ANIMATION ?= $(CONFIG_DMD)
+$(eval $(call have,CONFIG_GI))
+$(eval $(call nohave,CONFIG_AC))
 
 # Additional CFLAGS required on the WPC platform
 CFLAGS += -mdirect -DCONFIG_PLATFORM_WHITESTAR -fno-builtin -DCONFIG_PINMAME -mcode-section=.text -mdata-section=.text -mbss-section=ram
