--- a/platform/native/Makefile
+++ b/platform/native/Makefile
@@ -20,7 +20,9 @@ include cpu/$(CPU)/Makefile
 # different WPC variations.  For now, all of these are mandatory though.
 CONFIG_WPC=y
 CONFIG_FONT ?= $(CONFIG_DMD)
-CONFIG_AC=y
+$(eval $(call have,CONFIG_AC))
+$(eval $(call have,CONFIG_GI))
+$(eval $(call have,CONFIG_TRIAC))
 $(eval $(call have,CONFIG_RTC))
 CONFIG_ANIMATION ?= $(CONFIG_DMD)
 CONFIG_SCORE_RANK := y
