Native mode: Add console UI.
This lets you compile in native mode without needing curses or GTK.
Very rudimentary messages will be printed to the console via printf()
to let you know what the program & simulator are doing.

To enable, set NATIVE=y and CONFIG_UI=console in your .config.

--- a/cpu/native/Makefile
+++ b/cpu/native/Makefile
@@ -41,6 +41,11 @@ HOST_LIBS += $(shell pkg-config --libs gtk+-2.0) -export-dynamic
 NATIVE_OBJS += $(D)/ui_gtk.o
 endif
 
+ifeq ($(CONFIG_UI), console)
+CFLAGS += -DCONFIG_UI -DCONFIG_UI_CONSOLE
+NATIVE_OBJS += $(D)/ui_console.o
+endif
+
 ifeq ($(CONFIG_SOFT_REALTIME), y)
 NATIVE_OBJS += $(C)/realtime.o
 endif
