Move native task.c to 'cpu' directory, not 'platform'.
platform/native is trending towards becoming an all-simulation
directory.  task.c is not simulating anything, but could be used
by a PC-hardware type build.

Also rename to task_pth.c to indicate that it is built upon the
pth library.  Other task implementations may be added later.

--- a/cpu/native/Makefile
+++ b/cpu/native/Makefile
@@ -16,6 +16,7 @@ ifeq ($(CONFIG_PTH),y)
 PTH_CFLAGS := $(shell pth-config --cflags)
 HOST_LIBS += -lpth
 CFLAGS += $(PTH_CFLAGS)
+NATIVE_OBJS += $(C)/task_pth.o
 endif
 
 ifeq ($(CONFIG_NATIVE_PROFILE),y)
