Native mode: Move I/O mapping out of main.c.
I/O mapping is platform-specific (what addresses are used).
io.c has the generic I/O mapping code and io_wpc.c has the
WPC address mapping.  Other platforms can be supported in simulation
in the future by adding more maps.

The simulation logic for different types of devices should be
kept in yet other modules, and is mostly there already.

--- a/platform/native/Makefile
+++ b/platform/native/Makefile
@@ -40,6 +40,7 @@ NATIVE_OBJS += $(D)/main.o $(D)/switch.o $(D)/section.o \
 	$(D)/timing.o $(D)/watchdog.o $(D)/zerocross.o \
 	$(D)/signal.o $(D)/hwtimer.o $(D)/sound.o \
 	$(D)/coil.o $(D)/script.o $(D)/conf.o $(D)/node.o $(D)/io.o
+NATIVE_OBJS += $(if $(CONFIG_WPC), $(D)/io_wpc.o)
 NATIVE_OBJS += $(if $(CONFIG_PIC), $(D)/wpc-pic.o)
 
 # For ASCII DMD
