Native mode major cleanup:
- Fix many compiler warnings; many prototypes added.
- Broke simulation.h into several smaller header files put into the
  'include/hwsim' subdirectory.
- Renamed many functions/variables to change 'linux' to 'sim'.
- Continued utilizing the new I/O plugin support for WPC.

--- a/conf/freewpc.conf
+++ b/conf/freewpc.conf
@@ -1,3 +1,7 @@
 
 # sw.no_power says no +12V power at all to the switch matrix
 # set sw.no_power 1
+
+# sim.speed can be used to multiply the clock rate so that
+# the program runs faster than realtime.
+# set sim.speed 2
