Native mode: Continue cleanup of I/O simulation.
Also fix many warnings in the native mode build.

--- a/platform/native/Makefile
+++ b/platform/native/Makefile
@@ -36,10 +36,10 @@ CFLAGS += -I$(D) -DCONFIG_PLATFORM_WPC -DPAGE=0
 
 # Additional object files to be linked into the kernel region
 NATIVE_OBJS += $(D)/main.o $(D)/switch.o $(D)/section.o \
-	$(D)/bcd_string.o \
-	$(D)/timing.o $(D)/watchdog.o $(D)/zerocross.o \
+	$(D)/bcd_string.o $(D)/timing.o $(D)/watchdog.o \
 	$(D)/signal.o $(D)/hwtimer.o $(D)/sound.o
 
+NATIVE_OBJS += $(if $(CONFIG_AC), $(D)/zerocross.o)
 NATIVE_OBJS += $(D)/coil.o
 NATIVE_OBJS += $(D)/script.o
 NATIVE_OBJS += $(D)/conf.o
