Add CONFIG_MMIO build option.
This option says that readb() and writeb() calls should be
handled as memory-mapped I/O.  That is, the IOPTR argument
to these calls is a memory address, and the calls are translated
to inline reads/writes.

This is a platform dependent option.  When building for
simulation, it should never be defined.

--- a/platform/wpc/Makefile
+++ b/platform/wpc/Makefile
@@ -16,6 +16,7 @@ include cpu/$(CPU)/Makefile
 # Eventually, this section will contain conditionals for building on the
 # different WPC variations.  For now, all of these are mandatory though.
 $(eval $(call have,CONFIG_PLATFORM_WPC))
+$(eval $(call have,CONFIG_MMIO))
 CONFIG_FONT ?= $(CONFIG_DMD)
 $(eval $(call have,CONFIG_AC))
 $(eval $(call have,CONFIG_GI))
