Several improvements to simulation of soft realtime:
- Fix so we never sleep for a negative amount of time.
- Add lots of comments trying to explain the strategy.
- Use the new 'have' macro when defining CONFIG_PTH and
  CONFIG_SOFT_REALTIME.

--- a/sim/Makefile
+++ b/sim/Makefile
@@ -9,9 +9,9 @@ NATIVE_OBJS :=
 
 # Common native mode CPU configuration
 CPU := native
-CONFIG_PTH := y
+$(eval $(call have,CONFIG_PTH))
 CONFIG_UI ?= curses
-CONFIG_SOFT_REALTIME := y
+$(eval $(call have,CONFIG_SOFT_REALTIME))
 include cpu/$(CPU)/Makefile
 
 # Subplatform support
