--- a/machine/corvette/Makefile
+++ b/machine/corvette/Makefile
@@ -54,6 +54,11 @@ PINMAME_OTHER_ROMS = corvsnd*
 #
 # Object files exported by this game
 #
+# GAME_OBJS go into the system page, which should be a last resort or for common
+# functions, or for those which have to for some reason.  All feature tests can
+# go into GAME_TEST_OBJS.  Preferably, game functions go into GAME_PAGED_OBJS.
+# This works safely for any file that only uses CALLSET_ENTRY functions, deffs,
+# and leffs.  RTTs must go into GAME_OBJS.
 
 GAME_OBJS = zr1.o
 
@@ -65,9 +70,10 @@ GAME_PAGED_OBJS = simple.o driver.o kickback.o \
 	jets.o trivial.o sling.o zr_1_multiball.o shots.o \
 	leffs.o deffs.o skill.o
 
-SCHED_HEADERS += build/left_sling.h build/right_sling.h \
-	build/left_jet.h build/lower_jet.h build/upper_jet.h \
-	build/kickback_driver.h build/spinner.h build/loop_gate.h \
-	build/zr_1_up_rev_gate.h build/zr_1_low_rev_gate.h \
-	build/diverter.h
+#SCHED_HEADERS += build/kickback_driver.h
 
+#SCHED_HEADERS += build/left_sling.h build/right_sling.h \
+#	build/left_jet.h build/lower_jet.h build/upper_jet.h \
+#	build/kickback_driver.h build/spinner.h build/loop_gate.h \#
+#	build/zr_1_up_rev_gate.h build/zr_1_low_rev_gate.h \
+#	build/diverter.h
