updating ctemp to allow use of @SELF in addition to @self updating genmachine to spit out tests from template drivers and add them to TEST_OBJS adding autogenerated test code to divhold.ct making divhold.ct support both regular and fliptronic powered solenoid (via mode parameter) updating corvette to use all of the the above

--- a/machine/corvette/Makefile
+++ b/machine/corvette/Makefile
@@ -62,7 +62,7 @@ PINMAME_OTHER_ROMS = corvsnd*
 
 GAME_OBJS = zr1.o
 
-GAME_TEST_OBJS = zr1_test.o diverter_test.o
+GAME_TEST_OBJS = zr1_test.o #diverter_test.o
 
 GAME_INCLUDES =
 
