racetrack: refactoring code * calibration currently disabled * per-lane state is managed * car-stall detecting working consistently for speeds > 2 and below (ie. all but the fastest speed) * after looking at the williams racetrack test it might be an idea to remove stall detection and just concentrate on catching ALL encoder ticks and using the same fixed length track of 670 encoder switch changes. * added a car-test menu which each flipper button makes the corresponding car move forwards. * car-return working perfectly. * test menu overhauled for new states and tests.

--- a/machine/corvette/Makefile
+++ b/machine/corvette/Makefile
@@ -60,9 +60,9 @@ PINMAME_OTHER_ROMS = corvsnd*
 # This works safely for any file that only uses CALLSET_ENTRY functions, deffs,
 # and leffs.  RTTs must go into GAME_OBJS.
 
-GAME_OBJS = zr1.o
+GAME_OBJS = zr1.o racetrack.o
 
-GAME_TEST_OBJS = zr1_test.o #diverter_test.o
+GAME_TEST_OBJS = zr1_test.o racetrack_test.o
 
 GAME_INCLUDES =
 
