--- a/machine/corvette/Makefile
+++ b/machine/corvette/Makefile
@@ -67,7 +67,7 @@ GAME_TEST_OBJS = zr1_test.o racetrack_test.o
 GAME_INCLUDES =
 
 GAME_PAGED_OBJS = simple.o driver.o kickback.o \
-	jets.o trivial.o sling.o zr_1_multiball.o shots.o \
+	jets.o trivial.o sling.o zr1_multiball.o shots.o \
 	leffs.o deffs.o skill.o
 
 #SCHED_HEADERS += build/kickback_driver.h
@@ -75,5 +75,5 @@ GAME_PAGED_OBJS = simple.o driver.o kickback.o \
 #SCHED_HEADERS += build/left_sling.h build/right_sling.h \
 #	build/left_jet.h build/lower_jet.h build/upper_jet.h \
 #	build/kickback_driver.h build/spinner.h build/loop_gate.h \#
-#	build/zr_1_up_rev_gate.h build/zr_1_low_rev_gate.h \
+#	build/zr1_up_rev_gate.h build/zr1_low_rev_gate.h \
 #	build/diverter.h
