Fix bugs in the multiball mode module:
- Move mbmode.c from common into kernel area, since it needs
  access to caller data.  Structure is now more similar to
  timedmode.c.

- Remove the 'callback_page' field in the mode structure; it
  was never used and is not needed anymore.  Since the code
  is now in the system page, the caller's page is still intact.

- Add field 'active_task'.

- State is now kept in a separate variable, similar to how the
  timed modes use a timer var.  This is much more efficient than
  doing task queries to find out if the mode is running.

- mb_mode_get_state() is now inline since it is much simpler.

- Add DEFAULT_MBMODE initializer.

- Display/music refresh are gated on whether or not a
  priority is set.  Default PRI_NULL means no background refresh
  needed.  If this is not PRI_NULL, you must set both 'music'
  and 'deff_running' to a suitable value.

- Updated AFM "Bonus Multiball" mode to use the new style.
  The state variable must be explicitly initializer to MB_INACTIVE
  in start_ball.

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -9,6 +9,7 @@ KERNEL_BASIC_OBJS += $(if $(CONFIG_ANIMATION), kernel/animation.o)
 KERNEL_BASIC_OBJS += $(if $(CONFIG_DMD), kernel/frame.o)
 KERNEL_BASIC_OBJS += kernel/idle.o
 KERNEL_BASIC_OBJS += kernel/log.o
+KERNEL_BASIC_OBJS +=	kernel/mbmode.o
 KERNEL_BASIC_OBJS += kernel/misc.o
 KERNEL_BASIC_OBJS += kernel/puts.o
 KERNEL_BASIC_OBJS += kernel/random.o
