Add optimized routine for doing 32-bit division on 6809.
This functionality will be needed for future work.  Not having this
was causing lots of trouble and leading to writing strange code to
work around it.  This has been tested and seems to work well.
It should take around 1-2ms at worst.

--- a/cpu/m6809/Makefile
+++ b/cpu/m6809/Makefile
@@ -50,4 +50,5 @@ KERNEL_BASIC_OBJS += $(if $(CONFIG_MALLOC), $(C)/malloc.o)
 KERNEL_ASM_OBJS += $(C)/string.o
 KERNEL_ASM_OBJS += $(C)/bcd_string.o
 KERNEL_ASM_OBJS += $(C)/irqload.o
+KERNEL_ASM_OBJS += $(C)/div32.o
 KERNEL_ASM_OBJS += $(if $(CONFIG_BPT), $(C)/breakpoint.o)
