Initial checkin of the filesystem module.
The goal of this set of patches is to eliminate cases where the
system uses data from previous, incompatible software builds that
don't make any sense.  There is overlap in what the filesystem does
with both the checksum module (kernel/csum.c) and the software info
module (common/swinfo.c).

This first patch lays the groundwork:

- Add file_init() which is called during initialization.  This
  replaces the functionality of 'csum_area_check_all'; it will
  verify checksums but do more than that.

- Add 'file_register' event handler.  Any module that declares an
  nvram region (and an associated 'area_csum' struct) should
  catch this handler and pass it to the file_register() API.
  This is the way that the filesystem code can get a list of all
  such structures, without needing a separate array of them.
  Also, it deals with ROM paging automatically.

  No such handlers have been registered yet, so in this specific
  commit, there is no checksumming or protection at all.

- Add file_reset() API which can be called to clear the contents
  of all files.  This is intended to be called from factory reset.
  Today, that code deals with all regions of nvram separately, but
  the filesystem infrastructure can automate that.

- Added 'version' field to the area_csum.  Modules can increase this
  number when they know that the structure they control has changed in
  an incompatible way.  This will force the init code to reinitialize it.
  In the past, the checksum might still pass (small chance).

- Added a table at the top of NVRAM which holds all of the filesystem
  data.  This tells the running program about what the previous running
  program did.  This is in a fixed location, so it is guaranteed not to
  move across different loads.

- Added room to the filesystem table to store the checksums of each
  region/file.  Modules should remove the separate variables they had to
  declare before.  Also, these new checksums are 16-bit, 

--- a/cpu/m6809/Makefile
+++ b/cpu/m6809/Makefile
@@ -43,6 +43,7 @@ GCC_VERSION ?= 4.3.4
 
 KERNEL_OBJS     += $(C)/vector.o
 KERNEL_OBJS     += $(C)/div10.o
+KERNEL_OBJS     += $(C)/file.o
 KERNEL_ASM_OBJS += $(C)/farcall.o
 KERNEL_OBJS     += $(if $(CONFIG_TASK), $(C)/task.o)
 KERNEL_ASM_OBJS += $(if $(CONFIG_TASK), $(C)/task_6809.o)
