--- a/machine/afm/Makefile
+++ b/machine/afm/Makefile
@@ -52,7 +52,7 @@ PINMAME_OTHER_ROMS = afm_s*.l1
 #
 
 GAME_PAGED_OBJS = righthole.o lefthole.o afm_leff.o misc.o \
-	challenge.o shot.o bonusmb.o
+	shot.o bonusmb.o rules.o
 
 GAME_INCLUDES =
 
